--- a/gps/izat.conf
+++ b/gps/izat.conf
@@ -67,12 +67,12 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=DISABLED
+GTP_CELL=BASIC
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
-GTP_WIFI=DISABLED
+GTP_WIFI=BASIC
 
 #GTP_WAA valid modes:
 # DISABLED
@@ -83,12 +83,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=DISABLED
-
-#PIP valid modes:
-# DISABLED
-# PREMIUM
-PIP=DISABLED
+SAP=BASIC
 
 #ODCPI valid modes:
 #DISABLED
